[package]
name = "rfc2289-otp"
authors = ["Jonathan M. Wilbur <jonathan@wilbur.space>"]
description = "One Time Passwords (OTP) per IETF RFC 2289"
license = "MIT"
documentation = "https://docs.rs/rfc2289-otp"
repository = "https://github.com/JonathanWilbur/rfc2289-otp"
version = "1.1.0"
edition = "2021"
keywords = ["otp", "one", "time", "pad", "rfc2289"]
categories = ["cryptography", "encoding", "no-std", "parsing"]
readme = "README.md"

[dependencies]
cow-utils = "0.1.3"
digest = { version = "0.10.7", optional = true }
hex = { version = "0.4", default-features = false }
md4 = { version = "0.10.2", features = [], optional = true }
md5 = { version = "0.7.0", features = [], optional = true }
sha1_smol = { version = "=1.0.0", optional = true }

[features]
default = ["md4", "md5", "sha1", "words", "dyndig", "parsing"]
md4 = ["dep:md4"]
md5 = ["dep:md5"]
sha1 = ["dep:sha1_smol"]
words = []
dyndig = ["dep:digest"]
parsing = []
